--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -14,7 +14,8 @@ list(APPEND CLOUDSC_COMMON_SOURCES
   module/timer_mod.F90
   module/mycpu.c
   module/ec_pmon_mod.F90
-  module/load_array_mod.F90
+  module/file_io_mod.F90
+  module/expand_mod.F90
   module/validate_mod.F90
   module/cloudsc_global_state_mod.F90
   module/cloudsc_mpi_mod.F90
